RSFramework 1.5.0 Feat: rework RSCommand Feat: implement sub-commmand